feat: gliscor tests

--- a/final-project/tsconfig.json
+++ b/final-project/tsconfig.json
@@ -13,8 +13,9 @@
     "outDir": "build",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "strictPropertyInitialization": false
+    "strictPropertyInitialization": false,
+    "types": ["node", "jest"]
   },
-  "include": ["src/**/*", "tests/**/*"],
-  "exclude": ["node_modules/**/*", "build/**/*"]
+  "include": ["src/**/*", "__tests__/**/*"],
+  "exclude": ["node_modules/**/*", "build/**/*"],
 }
