--- a/final-project/package.json
+++ b/final-project/package.json
@@ -1,10 +1,14 @@
 {
   "license": "MIT",
   "scripts": {
-    "cli": "yarn ts-node src/cli/main.ts"
+    "cli": "yarn ts-node src/cli/main.ts",
+    "test": "yarn jest"
   },
   "devDependencies": {
+    "@types/jest": "^27.5.0",
     "@types/node": "^17.0.31",
+    "jest": "^28.0.3",
+    "ts-jest": "^28.0.1",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
   },
