--- a/final-project/package.json
+++ b/final-project/package.json
@@ -6,6 +6,7 @@
   },
   "devDependencies": {
     "@types/jest": "^27.5.0",
+    "@types/lodash": "^4.14.182",
     "@types/node": "^17.0.31",
     "jest": "^28.0.3",
     "ts-jest": "^28.0.1",
@@ -14,6 +15,7 @@
   },
   "dependencies": {
     "commander": "^9.2.0",
+    "lodash": "^4.17.21",
     "pg": "^8.7.3",
     "typeorm": "^0.3.6"
   }
