--- a/final-project/docker-compose.yml
+++ b/final-project/docker-compose.yml
@@ -7,4 +7,4 @@ services:
     environment:
       - POSTGRES_USER=user
       - POSTGRES_PASSWORD=pass
-      - POSTGRES_DB=gliscor-simulation
+      - POSTGRES_DB=pokemon
