--- a/final-project/docker-compose.yml
+++ b/final-project/docker-compose.yml
@@ -8,3 +8,5 @@ services:
       - POSTGRES_USER=user
       - POSTGRES_PASSWORD=pass
       - POSTGRES_DB=pokemon
+    volumes:
+      - ./tmpdata/postgres_data:/var/lib/postgresql/data
