--- a/final-project/package.json
+++ b/final-project/package.json
@@ -5,6 +5,7 @@
     "test": "yarn jest"
   },
   "devDependencies": {
+    "@types/cli-progress": "^3.9.2",
     "@types/jest": "^27.5.0",
     "@types/lodash": "^4.14.182",
     "@types/node": "^17.0.31",
@@ -14,6 +15,7 @@
     "typescript": "^4.6.4"
   },
   "dependencies": {
+    "cli-progress": "^3.11.0",
     "commander": "^9.2.0",
     "lodash": "^4.17.21",
     "pg": "^8.7.3",
