--- a/final-project/package.json
+++ b/final-project/package.json
@@ -5,6 +5,7 @@
     "test": "yarn jest"
   },
   "devDependencies": {
+    "@types/bluebird": "^3.5.36",
     "@types/cli-progress": "^3.9.2",
     "@types/jest": "^27.5.0",
     "@types/lodash": "^4.14.182",
@@ -15,6 +16,7 @@
     "typescript": "^4.6.4"
   },
   "dependencies": {
+    "bluebird": "^3.7.2",
     "cli-progress": "^3.11.0",
     "commander": "^9.2.0",
     "lodash": "^4.17.21",
