--- a/final-project/package.json
+++ b/final-project/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "bluebird": "^3.7.2",
     "cli-progress": "^3.11.0",
+    "colors": "^1.4.0",
     "commander": "^9.2.0",
     "lodash": "^4.17.21",
     "pg": "^8.7.3",
